correction horizontal scrolling

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -11,3 +11,9 @@
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width: 745px) {
+  .cards {
+    padding-top: 36px;
+  }
+}
