--- a/blocks/page.css
+++ b/blocks/page.css
@@ -15,3 +15,10 @@
   position: relative;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 745px) {
+  .page__section {
+    margin: 0 19px;
+    max-width: calc(100% - 38px);
+  }
+}
