--- a/pages/index.css
+++ b/pages/index.css
@@ -7,105 +7,4 @@
 @import url(../blocks/card.css);
 @import url(../blocks/footer.css);
 
-/* Note: I haven't yet transfered media queries to seperate files incase more code changes are needed. A little easier for me to make changes when still in one file. Will do this and video before final submission*/
-
-@media screen and (max-width: 745px) {
-  .profile {
-    flex-direction: column;
-    padding-top: 38.25px;
-  }
-
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
-    align-items: baseline;
-    grid-gap: 0;
-  }
-
-  .profile__image {
-    margin: 0;
-  }
-
-  .profile__title {
-    font-size: 22px;
-    line-height: 26.63px;
-    padding-top: 30px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 235px;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-    font-size: 14px;
-    line-height: 16.94px;
-    padding-top: 14px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 235px;
-  }
-
-  .profile__add-button {
-    margin: 0;
-    width: calc(100% - 38px);
-    min-width: 282px;
-    margin-top: 36px;
-  }
-
-  .profile__edit-button {
-    margin-left: 10px;
-    align-self: baseline;
-    height: 18px;
-    width: 18px;
-  }
-
-  .cards {
-    padding-top: 36px;
-  }
-
-  .header {
-    padding-top: 28px;
-  }
-
-  .header__logo {
-    width: 126px;
-    height: 24px;
-  }
-
-  .page__section {
-    margin: 0 19px;
-    max-width: calc(100% - 38px);
-  }
-
-  .footer__copyright {
-    padding-top: 48px;
-    padding-bottom: 36px;
-    font-size: 14px;
-    line-height: 16.94px;
-  }
-}
-
-@media screen and (min-width: 512px) and (max-width: 746px) {
-  .profile__description {
-    padding-left: 150px;
-    padding-right: 150px;
-    min-width: 300px;
-  }
-}
-
-@media screen and (width: 320px) {
-  .header {
-    margin-left: 0;
-    margin-right: 0;
-    min-width: 320px;
-  }
-
-  .header__logo {
-    padding-left: 27px;
-  }
-}
+/* Note: I haven't yet recorded video however will complete before final submission */
